2006-02-28  Mike Kestner  <mkestner@novell.com>

	* ListView.cs: Add UpdateSelection internal method. Remove SelectItem 
	and set Selected instead.
	* ListViewItem.cs: Call owner.UpdateSelection to manipulate the 
	collections.

2006-02-28  Peter Dennis Bartok  <pbartok@novell.com> 

	* ComboBox.cs: Allow setting SelectedIndex to -1. Fixes #77665

2006-02-28  Alexander Olk  <alex.olk@googlemail.com>

	* FontDialog.cs:
	  - Got rid of the panel. All controls are now directly added to
	    the dialog form
	  - It is now possible to set a font with the Font property
	  - MinSize and MaxSize property do now what they should
	  - ShowApply, ShowHelp, ShowColor, ShowEffects likewise
	  - Searching and selecting a font with the font textbox works now,
	    the same applies to the style and size textbox
	  - Draw the correct 3D border in the example panel
	  - Fixed a little mem leak (unused fonts didn't get disposed)
	  - Many other internal updates/rewrites...
	  - Fix typo

2006-02-27  Peter Dennis Bartok  <pbartok@novell.com> 

	* TextControl.cs: 
	  - InsertRTFFromStream: Added 'number of characters inserted' argument
	  - set_SelectedRTF: Now using the number of characters to calculate
	    the new location for the selection and cursor (x/y cannot be used
	    due to potentially already wrapped text)

2006-02-27  Peter Dennis Bartok  <pbartok@novell.com>

	* TextControl.cs: Added property and implemented means to allow 
	  disabling recalculation of a document (can be used to speed up
	  multiple inserts and is needed to make RTF inserts predictable, see
	  bug #77659)
	* RichTextBox.cs: Using the new NoRecalc property of Document to
	  keep x/y insert locations predictable. Also makes it faster inserting
	  large chunks of RTF

2006-02-27  Peter Dennis Bartok  <pbartok@novell.com> 

	* Control.cs: Separated special WM_SYSKEYUP keyboard handling. That way
	  it's easier for a child control to handle the other messages without